<resources>
    <string name="app_name">BullsEye</string>
    <string name="action_settings">Settings</string>
    <string name="action_next">Next</string>
    <string name="welcome_txt">Welcome to BullsEye!</string>
    <string name="welcome_msg_line1">Stay Connected!!!</string>
    <string name="welcome_msg_line2">Message, Alert, Track friends and family anytime anywhere.</string>
    <string name="termsandcond">Terms and Conditions</string>
    <string name="agreeandcont">Agree and continue</string>
    <string name="title_activity_register">" Verify Number"</string>
</resources>