<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context=".TermsActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:layout_marginBottom="@dimen/margin_60"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:text="@string/welcome_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_28"
                android:layout_marginBottom="@dimen/margin_20"
                android:id="@+id/welcomeText"
                android:textColor="@android:color/primary_text_dark"/>

            <ImageView
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:id="@+id/applicationLogo"
                android:src="@drawable/ic_orange"
                android:contentDescription="Application Logo"
                android:focusableInTouchMode="true"
                android:cropToPadding="false"
                android:layout_weight="0.17"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/welcome_msg_line1"
                android:id="@+id/messageLine1"
                android:textSize="@dimen/font_size_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:visibility="gone"
                android:textColor="@android:color/secondary_text_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/welcome_msg_line2"
                android:id="@+id/messageLine2"
                android:textSize="@dimen/font_size_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:linksClickable="false"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:textColor="@android:color/secondary_text_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/termsandcond"
                android:id="@+id/tocLink"
                android:textSize="@dimen/font_size_20"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_20"
                android:clickable="true"
                android:linksClickable="true"
                android:autoLink="web"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreeandcont"
        android:id="@+id/acceptButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="acceptTerms" />

</RelativeLayout>
